compiler-core/src/parse/snapshots/gleam_core__parse__tests__case_list_pattern_after_spread.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case somelist {\n        [rest.., last] -> 1\n        _ -> 2\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:18
  │
4 │         [rest.., last] -> 1
  │                  ^^^^ Invalid pattern

I was expecting the end of the list.
The spread pattern precesing this consumes the remaining elements of the list
therefore there is nothing left to match.
A spread can only be used to prepend elements to lists like this: `[first, ..rest]`
